change url pattern

--- a/main/templates/main_home.html
+++ b/main/templates/main_home.html
@@ -14,6 +14,9 @@
         <li class="nav-item active">
             <a class="nav-link" href="{% url 'costhome_url' %}">Cost Data Center</a>
         </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="{% url 'portfolio_url' %}">Portfolio</a>
+        </li>
     </div>
 </body>
 </html>
