change sqlite database with data and finalize qualityanalysis app

--- a/CostData/cost_base/templates/cost_base.html
+++ b/CostData/cost_base/templates/cost_base.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="{% url 'category_cost_url' %}">Cost Review</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'qualityhome_url' %}">Qualtiy Indicator</a>
+            <a class="nav-link" href="/qualityanalysisdashboard">Qualtiy Indicator</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'comment_url' %}">Comment</a>
