--- a/CostData/cost_base/templates/cost_home.html
+++ b/CostData/cost_base/templates/cost_home.html
@@ -51,7 +51,7 @@
       <div class="card-body">
         <h5 class="card-title">Quality Indicator</h5>
         <p class="card-text">Read customer satisfaction of our products with specialized quality indicator such as CDR, Hazard and FDR to analyze service trend and find the improvements. </p>
-        <a href="http://3.22.224.245/" class="btn btn-primary" style="color:white">Dashboard</a>
+        <a href="/qualityanalysisdashboard" class="btn btn-primary" style="color:white">Dashboard</a>
       </div>
       <div class="card-footer border-primary">
         {% if recent_bom %}
