--- a/main/templates/main_home.html
+++ b/main/templates/main_home.html
@@ -35,7 +35,7 @@
                 <a href="{% url 'sr_home_url' %}" class="btn btn-success btn-lg">Security Reinvent Center</a>
                 <a href="/qualityanalysisdashboard" class="btn btn-danger btn-lg">Quality Analysis Dashboard</a>
                 <a href="{% url 'costhome_url' %}" class="btn btn-info btn-lg">Cost Data Center</a>
-                <a href="{% url 'costhome_url' %}" class="btn btn-warning btn-lg">LG Support Video Tutorial</a>
+                <a href="/lgsupportvideotutorial" class="btn btn-warning btn-lg">LG Support Video Tutorial</a>
             </div>
         </div>
     </div>
