--- a/VideoTutorial/flaskapp/templates/index.html
+++ b/VideoTutorial/flaskapp/templates/index.html
@@ -26,7 +26,7 @@
                     <input type="checkbox" class="toggle-menu"/>
                     <div class="hamburger"></div>
                     <ul class="menu">
-                        <li><a href="#"><span>Home</span></a></li>
+                        <li><a href="/"><span>Home</span></a></li>
                         <li><a href="#product-section"><span>Product</span></a></li>
                         <li><a href="#symptom-section"><span>Top Loader</span></a></li>
                         <li><a href="#symptom2-section"><span>Front Loader</span></a></li>
