QualityAnalysis other page rendering

--- a/QualityAnalysis/flasktodo/templates/todo/tables.html
+++ b/QualityAnalysis/flasktodo/templates/todo/tables.html
@@ -33,7 +33,7 @@
                         <li><a class="dropdown-item" onclick="doDark()">Dark Theme</a></li>
                         <li><a class="dropdown-item" onclick="doLight()">Light Theme</a></li>
                         <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Logout</a></li>
+                        <li><a class="dropdown-item" href="">Logout</a></li>
                     </ul>
                 </li>
             </ul>
@@ -44,7 +44,7 @@
                     <div class="sb-sidenav-menu">
                         <div class="nav">
                             <div class="sb-sidenav-menu-heading">Core</div>
-                            <a class="nav-link" href="{{ url_for('todo.index') }}">
+                            <a class="nav-link" href="{{ url_for('todo.index') }}" href="{{ url_for('todo.index') }}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Dashboard
                             </a>
