--- a/QualityAnalysis/flasktodo/templates/card/dataframe.html
+++ b/QualityAnalysis/flasktodo/templates/card/dataframe.html
@@ -33,6 +33,7 @@
                         <li><a class="dropdown-item" onclick="doDark()">Dark Theme</a></li>
                         <li><a class="dropdown-item" onclick="doLight()">Light Theme</a></li>
                         <li><hr class="dropdown-divider" /></li>
+                        <li><a class="dropdown-item">Login</a></li>
                     </ul>
                 </li>
             </ul>
@@ -44,7 +45,7 @@
                         <div class="nav">
                             <div class="sb-sidenav-menu-heading">Core</div>
                             <form action="/chart" method="POST">
-                                <a class="nav-link" type="submit" class="btn btn-primary">
+                                <a class="nav-link" type="submit" class="btn btn-primary" href="{{ url_for('todo.index')}}">
                                     <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                     Dashboard
                                 </a>
@@ -72,12 +73,12 @@
                                         Authentication
                                         <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                                     </a>
-                                    <!-- <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
+                                    <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
                                         <nav class="sb-sidenav-menu-nested nav">
-                                            <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
-                                            <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+                                            <a class="nav-link" href="">Login</a>
+                                            <a class="nav-link" href="">Register</a>
                                         </nav>
-                                    </div> -->
+                                    </div>
                                     <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
                                         Error
                                         <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
