--- a/QualityAnalysis/flasktodo/templates/todo/charts.html
+++ b/QualityAnalysis/flasktodo/templates/todo/charts.html
@@ -33,7 +33,7 @@
                         <li><a class="dropdown-item" onclick="doDark()">Dark Theme</a></li>
                         <li><a class="dropdown-item" onclick="doLight()">Light Theme</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Logout</a></li>
+                        <li><a class="dropdown-item" href="">Logout</a></li>
                     </ul>
                 </li>
             </ul>
@@ -71,12 +71,12 @@
                                         Authentication
                                         <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                                     </a>
-                                    <!-- <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
+                                    <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
                                         <nav class="sb-sidenav-menu-nested nav">
-                                            <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
-                                            <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+                                            <a class="nav-link" href="">Login</a>
+                                            <a class="nav-link" href="">Register</a>
                                         </nav>
-                                    </div> -->
+                                    </div>
                                     <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
                                         Error
                                         <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
