--- a/QualityAnalysis/flasktodo/templates/todo/index.html
+++ b/QualityAnalysis/flasktodo/templates/todo/index.html
@@ -33,6 +33,7 @@
                         <li><a class="dropdown-item" onclick="doDark()">Dark Theme</a></li>
                         <li><a class="dropdown-item" onclick="doLight()">Light Theme</a></li>
                         <li><hr class="dropdown-divider" href="" /></li>
+                        <li><a class="dropdown-item" href="">Logout</a></li>
                     </ul>
                 </li>
             </ul>
@@ -44,7 +45,7 @@
                         <div class="nav">
                             <div class="sb-sidenav-menu-heading">Core</div>
                             <form action="/chart" method="POST">
-                                <a class="nav-link" type="submit" class="btn btn-primary">
+                                <a class="nav-link" type="submit" class="btn btn-primary" href="{{ url_for('todo.index') }}">
                                     <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                     Dashboard
                                 </a>
