--- a/QualityAnalysis/flasktodo/templates/todo/quality.html
+++ b/QualityAnalysis/flasktodo/templates/todo/quality.html
@@ -32,7 +32,7 @@
                         <li><a class="dropdown-item" onclick="doDark()">Dark Theme</a></li>
                         <li><a class="dropdown-item" onclick="doLight()">Light Theme</a></li>
                         <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Logout</a></li>
+                        <li><a class="dropdown-item" href="">Logout</a></li>
                     </ul>
                 </li>
             </ul>
