--- a/QualityAnalysis/flasktodo/templates/windowskin/layout-sidenav-light.html
+++ b/QualityAnalysis/flasktodo/templates/windowskin/layout-sidenav-light.html
@@ -32,7 +32,7 @@
                         <li><a class="dropdown-item">Light Side Navbar</a></li>
                         <li><a class="dropdown-item">Black Background</a></li>
                         <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Logout</a></li>
+                        <li><a class="dropdown-item" href="">Logout</a></li>
                     </ul>
                 </li>
             </ul>
