--- a/VideoTutorial/flaskapp/templates/index.html
+++ b/VideoTutorial/flaskapp/templates/index.html
@@ -95,62 +95,62 @@
                 <h1>What is your Top Loader symptom?</h1>
             </div>
             <div class="symptom-container">
-                <form action="/topnoise" method="POST">
+                <form action="{{ url_for('action.topnoise') }}" method="POST">
                     <div class="box image1">
                         <button type="submit" class="btn btn-primary">Noise Vibration</button>
                     </div>
                 </form>
-                <form action="/topcloth" method="POST">
+                <form action="{{ url_for('action.topcloth') }}" method="POST">
                     <div class="box image2">
                         <button type="submit" class="btn btn-primary">Clothing Issue</button>
                     </div>
                 </form>
-                <form action="/topcycle" method="POST">
+                <form action="{{ url_for('action.topcycle') }}" method="POST">
                     <div class="box image3">
                         <button type="submit" class="btn btn-primary">Cycle Operation</button>
                     </div> 
                 </form>
-                <form action="/topdrain" method="POST">
+                <form action="{{ url_for('action.topdrain') }}" method="POST">
                     <div class="box image4">
                         <button type="submit" class="btn btn-primary">Drainage</button>
                     </div>
                 </form>
-                <form action="/toperror" method="POST">
+                <form action="{{ url_for('action.toperror') }}" method="POST">
                     <div class="box image5">
                         <button type="submit" class="btn btn-primary">Error Code</button>
                     </div>
                 </form>
-                <form action="/topfill" method="POST">
+                <form action="{{ url_for('action.topfill') }}" method="POST">
                     <div class="box image6">
                         <button type="submit" class="btn btn-primary">Filling</button>
                     </div>
                 </form>
-                <form action="/topleak" method="POST">
+                <form action="{{ url_for('action.topleak') }}" method="POST">
                     <div class="box image7">
                         <button type="submit" class="btn btn-primary">Leaking</button>
                     </div>
                 </form>
-                <form action="/topdispense" method="POST">
+                <form action="{{ url_for('action.topdispense') }}" method="POST">
                     <div class="box image8">
                         <button type="submit" class="btn btn-primary">Dispenser</button>
                     </div>
                 </form>
-                <form action="/topdoor" method="POST">
+                <form action="{{ url_for('action.topdoor') }}" method="POST">
                     <div class="box image9">
                         <button type="submit" class="btn btn-primary">Door Issue</button>
                     </div>
                 </form>
-                <form action="/toppower" method="POST">
+                <form action="{{ url_for('action.toppower') }}" method="POST">
                     <div class="box image10">
                         <button type="submit" class="btn btn-primary">Not Working</button>
                     </div>
                 </form>
-                <form action="/topsmell" method="POST">
+                <form action="{{ url_for('action.topsmell') }}" method="POST">
                     <div class="box image11">
                         <button type="submit" class="btn btn-primary">Smell Odor</button>
                     </div>
                 </form>
-                <form action="/topthinq" method="POST">
+                <form action="{{ url_for('action.topthinq') }}" method="POST">
                     <div class="box image12">
                         <button type="submit" class="btn btn-primary">ThinQ App</button>
                     </div>
@@ -165,62 +165,62 @@
                 <h1>What is your Front Loader symptom?</h1>
             </div>
             <div class="symptom-container">
-                <form action="/frontnoise" method="POST">
+                <form action="{{ url_for('action.frontnoise') }}" method="POST">
                     <div class="box image1">
                         <button type="submit" class="btn btn-primary">Noise Vibration</button>
                     </div>
                 </form>
-                <form action="/frontcloth" method="POST">
+                <form action="{{ url_for('action.frontcloth') }}" method="POST">
                     <div class="box image2">
                         <button type="submit" class="btn btn-primary">Clothing Issue</button>
                     </div>
                 </form>
-                <form action="/frontcycle" method="POST">
+                <form action="{{ url_for('action.frontcycle') }}" method="POST">
                     <div class="box image3">
                         <button type="submit" class="btn btn-primary">Cycle Operation</button>
                     </div>
                 </form>
-                <form action="/frontdrain" method="POST">
+                <form action="{{ url_for('action.frontdrain') }}" method="POST">
                     <div class="box image4">
                         <button type="submit" class="btn btn-primary">Drainage</button>
                     </div>
                 </form>
-                <form action="/fronterror" method="POST">
+                <form action="{{ url_for('action.fronterror') }}" method="POST">
                     <div class="box image5">
                         <button type="submit" class="btn btn-primary">Error Code</button>
                     </div>
                 </form>
-                <form action="/frontfill" method="POST">
+                <form action="{{ url_for('action.frontfill') }}" method="POST">
                     <div class="box image6">
                         <button type="submit" class="btn btn-primary">Filling</button>
                     </div>
                 </form>
-                <form action="/frontleak" method="POST">
+                <form action="{{ url_for('action.frontleak') }}" method="POST">
                     <div class="box image7">
                         <button type="submit" class="btn btn-primary">Leaking</button>
                     </div>
                 </form>
-                <form action="/frontdispense" method="POST">
+                <form action="{{ url_for('action.frontdispense') }}" method="POST">
                     <div class="box image8">
                         <button type="submit" class="btn btn-primary">Dispenser</button>
                     </div>
                 </form>
-                <form action="/frontdoor" method="POST">
+                <form action="{{ url_for('action.frontdoor') }}" method="POST">
                     <div class="box image9">
                         <button type="submit" class="btn btn-primary">Door Issue</button>
                     </div>
                 </form>
-                <form action="/frontpower" method="POST">
+                <form action="{{ url_for('action.frontpower') }}" method="POST">
                     <div class="box image10">
                         <button type="submit" class="btn btn-primary">Not Working</button>
                     </div>
                 </form>
-                <form action="/frontsmell" method="POST">
+                <form action="{{ url_for('action.frontsmell') }}" method="POST">
                     <div class="box image11">
                         <button type="submit" class="btn btn-primary">Smell Odor</button>
                     </div>
                 </form>
-                <form action="/frontthinq" method="POST">
+                <form action="{{ url_for('action.frontthinq') }}" method="POST">
                     <div class="box image12">
                         <button type="submit" class="btn btn-primary">ThinQ App</button>
                     </div>
@@ -233,7 +233,7 @@
         <div class="review">
             <h1>Customer Satisfaction Survey</h1>
             <h2>This is monitoring by production site and your opinion will improve product quality</h2>
-            <form action="/submit" method="POST">
+            <form action="{{ url_for('action.submit') }}" method="POST">
                 <div class="form-group">
                 <h3>What is the serial number of product?</h3>
                 <input
