flask integrate to sqlite

--- a/VideoTutorial/flaskapp/templates/success.html
+++ b/VideoTutorial/flaskapp/templates/success.html
@@ -13,7 +13,7 @@
         <div class="review">
             <h1>Thank you for your opinion</h1>
             
-            <form action="/home" method="POST">
+            <form action="/lgsupportvideotutorial" method="POST">
                 <h2>Go back to homepage</h2>
                 <button type="submit" name="action3" value="Homepage">
                     <i class="fas fa-home"></i>
