change team name

--- a/CostData/report/templates/report_base.html
+++ b/CostData/report/templates/report_base.html
@@ -52,7 +52,7 @@
   
     <div class="footer">
       <h5> 
-          Author : LGEUS TN R&D Department Eunbi Yoon |  Email : 
+          Author : LGEUS TN Smart IT Department Eunbi Yoon |  Email : 
           <a href = "mailto: eunbi1.yoon@lge.com"> eunbi1.yoon@lge.com</a>
       </h5>
     </div>
