--- a/VideoTutorial/flaskapp/templates/index.html
+++ b/VideoTutorial/flaskapp/templates/index.html
@@ -17,7 +17,7 @@
                         </a>
                     </div> 
                     <div class="text">
-                        <div class="text1">LGEUS TN R&D Team </div>
+                        <div class="text1">LGEUS TN Smart IT Team </div>
                         <div class="text2">LG Washing Machine</div>
                         <div class="text3">Customer Quick Guide</div>
                     </div>     
@@ -288,7 +288,7 @@
             <div class="footer__content">
               <section class="left">
                 <a class="footer__item">Made by Eunbi Yoon</a>
-                <a class="footer__item">LGEUS Tennessee Factory R&D Team</a>
+                <a class="footer__item">LGEUS Tennessee Factory Smart IT Team</a>
               </section>
               <section class="right">
                 <div class="footer__column">
