--- a/VideoTutorial/flaskapp/templates/success.html
+++ b/VideoTutorial/flaskapp/templates/success.html
@@ -24,7 +24,7 @@
             <div class="footer__content">
               <section class="left">
                 <a class="footer__item">Made by Eunbi Yoon</a>
-                <a class="footer__item">LGEUS Tennessee Factory R&D Team</a>
+                <a class="footer__item">LGEUS Tennessee Factory Smart IT Team</a>
               </section>
               <section class="right">
                 <div class="footer__column">
