--- a/CostData/report/templates/category-bom.html
+++ b/CostData/report/templates/category-bom.html
@@ -28,7 +28,7 @@
 
 {% block footer %}
     <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.025); padding:0">
-        Power By LGETN R&D Eunbi Yoon
+        Power By LGETN Smart IT Eunbi Yoon
         <a style="text-decoration:underline; color:grey" href="mailto : eunbi1.yoon@lge.com">eunbi1.yoon@lge.com</a>
         | Support By LGETN Accounting Kitae Park 
         <a style="text-decoration:underline; color:grey" href="mailto : kitae3.park@lge.com">kitae3.park@lge.com</a>, 
