--- a/CostData/report/templates/category-cost.html
+++ b/CostData/report/templates/category-cost.html
@@ -28,9 +28,9 @@
 
 {% block footer %}
     <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.025); padding:0">
-        Power By LGETN R&D Eunbi Yoon
+        Power By LGETN Smart IT Eunbi Yoon
         <a style="text-decoration:underline; color:grey" href="mailto : eunbi1.yoon@lge.com">eunbi1.yoon@lge.com</a>
-        | Support By LGETN R&D Catalina Manolache 
+        | Support By LGETN Smart IT Catalina Manolache 
         <a style="text-decoration:underline; color:grey" href="mailto : catalina.manolache@lge.com">catalina.manolache@lge.com</a> 
     </div>
 {% endblock %}
