--- a/SecurityReinvent/SR_Base/templates/sr_base.html
+++ b/SecurityReinvent/SR_Base/templates/sr_base.html
@@ -42,7 +42,7 @@
   <footer class="text-center text-lg-start bg-white text-muted" style="position: fixed;bottom:0; width: 100%;">
     {% block footer %}
       <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.025); padding:0">
-        Power By LGETN R&D Eunbi Yoon
+        Power By LGETN Smart IT Eunbi Yoon
         <a style="text-decoration:underline; color:grey" href="mailto : eunbi1.yoon@lge.com">eunbi1.yoon@lge.com</a>
         | Support By LGETN SHEE Joshua DeRosa
         <a style="text-decoration:underline; color:grey" href="mailto : joshua1.derosa@lge.com">joshua1.derosa@lge.com,</a>
