--- a/SecurityReinvent/reinvent/templates/re_base.html
+++ b/SecurityReinvent/reinvent/templates/re_base.html
@@ -52,7 +52,7 @@
     {% endblock %}
     {% block footer %}
         <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.025); padding:0">
-            Power By LGETN R&D Eunbi Yoon
+            Power By LGETN Smart IT Eunbi Yoon
         <a style="text-decoration:underline; color:grey" href="mailto : eunbi1.yoon@lge.com">eunbi1.yoon@lge.com</a>
             | Support By LGETN HR Su Fultz
             <a style="text-decoration:underline; color:grey" href="mailto : su.fultz@lge.com">su.fultz@lge.com,</a>
